# Multi-agent-stock-analysis-demo

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: symbols_cn_full.json  symbols_hk_full.json  symbols_seed.json
backend/app/routes/: admin.py  alerts.py  auth.py  chat.py  debate.py  feedback.py  financials.py  funds.py  gold.py  market_overview.py  paper.py  quick.py  reports.py  snapshot.py  symbol_search.py  track.py  watchlist.py
backend/app/scripts/: build_cn_symbols.py  build_hk_symbols.py
backend/app/services/: alert_scheduler.py  alerts.py  app_settings.py  auth.py  budget.py  db.py  events.py  feedback.py  financials.py  funds.py  gold.py  invites.py  market_data.py  market_overview.py  paper.py  push.py  rate_limit.py  reports.py  skill_runner.py  symbol_search.py  tradingagents_runner.py  watchlist.py
deploy/: install.sh  nginx.conf  package.ps1  server-pip-install.sh  setup-server.sh  stock-web-backend.service
docs/: PLAN.md  SKILL.md
frontend/: .env.example  .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: alert-settings.tsx  app-shell.tsx  auth-widget.tsx  candle-chart.tsx  debate-stream.tsx  financials-panel.tsx  followup-chat.tsx  fund-compare.tsx  gold-chat.tsx  gold-panel.tsx  language-switcher.tsx  onboarding.tsx  paper-portfolio.tsx  paper-trade.tsx  quick-result.tsx  report-view.tsx  snapshot-card.tsx  stock-compare.tsx  (+2 more)
(+18 files in other folders)
